# hashcracker

./: CMakeLists.txt  README.md  main.cpp
debian/: changelog  control  hashcracker.service  rules
